--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -13,9 +13,9 @@
 
         <ImageView
             android:id="@+id/statusImageView"
-            android:layout_width="56dp"
-            android:layout_height="20dp"
-            android:layout_marginTop="8dp"
+            android:layout_width="42dp"
+            android:layout_height="15dp"
+            android:layout_marginTop="9dp"
             android:contentDescription="@string/status" />
 
         <TextView
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/statusImageView"
-            android:layout_marginTop="3dp"
+            android:layout_marginTop="4dp"
             android:ellipsize="end"
             android:singleLine="true"
             android:textColor="@color/font_major_dark"
@@ -53,7 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/pivotView"
         android:orientation="vertical"
-        android:paddingRight="16dp" >
+        android:layout_marginRight="16dp" >
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -86,7 +86,6 @@
             android:id="@+id/vendorTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="0dp"
             android:ellipsize="end"
             android:gravity="right"
             android:singleLine="true"
