--- a/res/layout/fragment_me.xml
+++ b/res/layout/fragment_me.xml
@@ -4,7 +4,7 @@
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
 	android:orientation="vertical"
-	android:background="@color/list_background" >
+	android:background="@color/background" >
 
     <RelativeLayout
 	    android:layout_width="match_parent"
