--- a/res/layout/fragment_statistics.xml
+++ b/res/layout/fragment_statistics.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:baselineAligned="false"
     android:orientation="vertical"
-    android:background="@color/list_background" >
+    android:background="@color/background" >
 
     <RelativeLayout
         android:layout_width="match_parent"
