--- a/res/layout/list_report.xml
+++ b/res/layout/list_report.xml
@@ -37,40 +37,44 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
 		android:paddingRight="16dp" >
-            
-        <TextView android:id="@+id/dateTextView"    
-            android:layout_width="wrap_content"  
+
+        <TextView
+            android:id="@+id/dateTextView"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-			android:layout_alignParentRight="true"
-			android:layout_marginTop="16dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="16dp"
             android:ellipsize="end"
             android:singleLine="true"
-            android:textColor="@color/hint_light_grey"  
+            android:textColor="@color/hint_light_grey"
             android:textSize="14sp" />
 
-        <TextView
-            android:id="@+id/signTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-			android:layout_alignParentRight="true"
-            android:layout_alignBottom="@+id/amountTextView"
-            android:layout_marginBottom="1dp"
-            android:text="@string/rmb"
-            android:textColor="@color/hint_black"  
-            android:textSize="14sp" />
-
-        <TextView
-            android:id="@+id/amountTextView"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/dateTextView"
-            android:layout_toLeftOf="@+id/signTextView"
-            android:layout_marginTop="6dp"
-            android:layout_marginRight="3dp"
-            android:ellipsize="end"
-            android:singleLine="true"
-            android:textColor="@color/font_major_dark"
-            android:textSize="22sp" />
+            android:gravity="right|bottom" >
+
+            <TextView
+                android:id="@+id/amountTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="3dp"
+                android:layout_marginTop="6dp"
+                android:ellipsize="end"
+                android:singleLine="true"
+                android:textColor="@color/font_major_dark"
+                android:textSize="22sp" />
+
+            <TextView
+                android:id="@+id/signTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/rmb"
+                android:textColor="@color/hint_black"
+                android:textSize="14sp" />
+
+        </LinearLayout>
 
     </RelativeLayout>
 
