--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     
+    <color name="background">#FFF5F6F8</color>
+    
     <color name="font_major_dark">#FF373737</color>
     <color name="font_minor_dark">#FF333333</color>
     <color name="font_major_light">#CCFFFFFF</color>
+    <color name="font_reim_number">#FFFF5353</color>
+    <color name="font_budget">#FF3CB798</color>
     <color name="start_font">#FFFE8888</color>
     
     <color name="start_divider">#FFFE8888</color>
@@ -13,13 +17,13 @@
     
     <color name="hint_black">#FF000000</color>
     <color name="hint_white">#CCFFFFFF</color>
+    <color name="hint_grey">#FF999999</color>
     <color name="hint_dark_grey">#CC000000</color>
     <color name="hint_light_grey">#66000000</color>
     
     <color name="button_text_dark">#FFFF898C</color>
     <color name="button_text_light">#FFFFFFFF</color>
     
-    <color name="list_background">#FFF5F6F8</color>
     <color name="list_divider">#1A000000</color>
     <color name="list_item_selected">#FFFBE2E3</color>
     <color name="list_item_unselected">#00000000</color>
